tests/errors/bytes-invalid-hex-escape/main.pa
# A \x escape in a bytes literal without two hex digits.
def main = '\xZZ'
